--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,4 @@ export(prior_summary)
 export(rstan_package_skeleton)
 importFrom(stats,quantile)
 importFrom(utils,download.file)
+importFrom(utils,packageVersion)
