--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,8 @@ Authors@R: c(person("Jonah", "Gabry", email = "jsg2201@columbia.edu",
 Maintainer: Jonah Gabry <jsg2201@columbia.edu>
 Description: Provides various tools for developers of R packages interfacing
     with Stan, including functions to set up the required package structure,
-    S3 generic methods to unify function naming across Stan-based R packages,
-    and a vignette with guidelines for developers.
+    S3 generics and default methods to unify function naming across Stan-based 
+    R packages, and a vignette with recommendations for developers.
 License: GPL (>=3)
 URL: http://mc-stan.org/, https://groups.google.com/forum/#!forum/stan-users
 BugReports: https://github.com/stan-dev/rstantools/issues
@@ -26,7 +26,6 @@ Suggests:
     rstanarm (>= 2.12.1),
     shinystan (>= 2.2.1),
     loo (>= 0.1.6),
-    devtools,
     testthat,
     covr,
     knitr,
