--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Maintainer: Jonah Gabry <jsg2201@columbia.edu>
 Description: Provides various tools for developers of R packages interfacing
     with 'Stan' <http://mc-stan.org>, including functions to set up the required 
     package structure, S3 generics and default methods to unify function naming 
-    across Stan-based R packages, and a vignette with recommendations for 
+    across 'Stan'-based R packages, and a vignette with recommendations for 
     developers.
 License: GPL (>=3)
 URL: http://mc-stan.org/, https://groups.google.com/forum/#!forum/stan-users
