Add loo prediction generics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,11 @@ S3method(predictive_error,default)
 S3method(predictive_interval,default)
 S3method(prior_summary,default)
 export(log_lik)
+export(loo_linpred)
+export(loo_predict)
+export(loo_predictive_interval)
 export(posterior_interval)
+export(posterior_linpred)
 export(posterior_predict)
 export(predictive_error)
 export(predictive_interval)
