add init_cpp function and also call it internally from rstan_package_skeleton

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(posterior_interval,default)
 S3method(predictive_error,default)
 S3method(predictive_interval,default)
 S3method(prior_summary,default)
+export(init_cpp)
 export(log_lik)
 export(loo_linpred)
 export(loo_pit)
