--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -13,15 +13,15 @@ navbar:
     - text: "Other Packages"
       menu:
         - text: "rstan"
-          href: http://mc-stan.org/users/interfaces/rstan.html
+          href: http://mc-stan.org/rstan
         - text: "rstanarm"
-          href: http://mc-stan.org/users/interfaces/rstanarm.html
+          href: http://mc-stan.org/rstanarm
         - text: "bayesplot"
-          href: http://mc-stan.org/users/interfaces/bayesplot.html
+          href: http://mc-stan.org/bayesplot
         - text: "shinystan"
-          href: http://mc-stan.org/users/interfaces/shinystan.html
+          href: http://mc-stan.org/shinystan
         - text: "loo"
-          href: http://mc-stan.org/users/interfaces/loo.html
+          href: http://mc-stan.org/loo
     - text: "Stan"
       href: http://mc-stan.org
   right:
@@ -29,3 +29,5 @@ navbar:
      href: https://twitter.com/mcmc_stan
    - icon: fa-github
      href: https://github.com/stan-dev/rstantools
+   - icon: fa-users
+     href: http://discourse.mc-stan.org/
