--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,8 @@ Suggests:
     knitr,
     devtools,
     roxygen2 (>= 6.0.1),
-    rmarkdown
+    rmarkdown,
+    rstudioapi,
+    usethis (>= 1.3.0)
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
