--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: rstantools
 Type: Package
 Title: Tools for Developing R Packages Interfacing with 'Stan'
-Version: 1.5.0
+Version: 1.5.0.9000
 Date: 2018-04-16
 Authors@R: c(person("Jonah", "Gabry", email = "jsg2201@columbia.edu",
                     role = c("aut", "cre")),
@@ -20,6 +20,7 @@ URL: http://discourse.mc-stan.org/, http://mc-stan.org/rstantools/
 BugReports: https://github.com/stan-dev/rstantools/issues
 Encoding: UTF-8
 LazyData: true
+SystemRequirements:	pandoc
 Imports: stats, utils
 Suggests:
     bayesplot (>= 1.5.0),
@@ -37,3 +38,4 @@ Suggests:
     usethis (>= 1.3.0)
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
+
