--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -24,6 +24,8 @@ navbar:
           href: http://mc-stan.org/shinystan
         - text: "loo"
           href: http://mc-stan.org/loo
+        - text: "projpred"
+          href: http://mc-stan.org/projpred
     - text: "Stan"
       href: http://mc-stan.org
   right:
