--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ BugReports: https://github.com/stan-dev/rstantools/issues
 Encoding: UTF-8
 LazyData: true
 SystemRequirements:	pandoc
-Imports: stats, utils
+Imports: stats, utils, usethis (>= 1.3.0), Rcpp (>= 0.12.16)
 Suggests:
     bayesplot (>= 1.5.0),
     rstan (>= 2.17.2),
@@ -37,7 +37,6 @@ Suggests:
     roxygen2 (>= 6.0.1),
     rmarkdown,
     rstudioapi,
-    usethis (>= 1.3.0)
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
 
