--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,11 +21,8 @@ export(predictive_error)
 export(predictive_interval)
 export(prior_summary)
 export(rstan_config)
+export(rstan_create_package)
 export(rstan_package_skeleton)
-export(rstan_package_skeleton_plus)
 export(use_rstan)
 importFrom(stats,quantile)
 importFrom(stats,var)
-importFrom(utils,available.packages)
-importFrom(utils,download.file)
-importFrom(utils,packageVersion)
