--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,6 @@ Authors@R: c(person("Jonah", "Gabry", email = "jsg2201@columbia.edu",
                     role = "aut"),
              person("Stefan", "Siegert", role = "ctb"),
              person("Trustees of", "Columbia University", role = "cph"))
-Maintainer: Jonah Gabry <jsg2201@columbia.edu>
 Description: Provides various tools for developers of R packages interfacing
     with 'Stan' <http://mc-stan.org>, including functions to set up the required 
     package structure, S3 generics and default methods to unify function naming 
@@ -23,13 +22,14 @@ BugReports: https://github.com/stan-dev/rstantools/issues
 Encoding: UTF-8
 LazyData: true
 SystemRequirements:	pandoc
-Imports: stats, utils, usethis (>= 1.3.0), Rcpp (>= 0.12.16)
+Imports: stats, utils, Rcpp (>= 0.12.16)
 Suggests:
     bayesplot (>= 1.5.0),
     rstan (>= 2.17.2),
     rstanarm (>= 2.17.4),
     shinystan (>= 2.4.0),
     loo (>= 2.0.0),
+    usethis (>= 1.3.0),
     testthat,
     covr,
     knitr,
