--- a/inst/include/sys/DESCRIPTION
+++ b/inst/include/sys/DESCRIPTION
@@ -8,6 +8,6 @@ Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Depends: R (>= 3.4.0)
-Imports: Rcpp (>= 0.12.16), methods, rstan (>= 2.18.1), rstantools (>= 1.5.0)
-LinkingTo: StanHeaders (>= 2.18.0), rstan (>= 2.18.1), BH (>= 1.66.0), Rcpp (>= 0.12.16), RcppEigen (>= 0.3.3.4.0)
+Imports: Rcpp (>= 0.12.0), methods, rstan (>= 2.18.1), rstantools
+LinkingTo: StanHeaders (>= 2.18.0), rstan (>= 2.18.1), BH (>= 1.66.0), Rcpp (>= 0.12.0), RcppEigen (>= 0.3.3.3.0)
 Encoding: UTF-8
