--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ URL: http://discourse.mc-stan.org/, http://mc-stan.org/rstantools/
 BugReports: https://github.com/stan-dev/rstantools/issues
 Encoding: UTF-8
 LazyData: true
-SystemRequirements: pandoc
+SystemRequirements: pandoc, C++14
 Imports: stats, utils, Rcpp (>= 0.12.16), desc
 Suggests:
     bayesplot (>= 1.5.0),
@@ -33,7 +33,7 @@ Suggests:
     testthat,
     covr,
     knitr,
-    devtools,
+    pkgload,
     roxygen2 (>= 6.0.1),
     rmarkdown,
     rstudioapi,
