--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(prior_summary,default)
 export(bayes_R2)
 export(init_cpp)
 export(log_lik)
+export(loo_R2)
 export(loo_linpred)
 export(loo_pit)
 export(loo_predict)
