--- a/inst/include/sys/DESCRIPTION
+++ b/inst/include/sys/DESCRIPTION
@@ -10,4 +10,5 @@ License: What license is it under?
 Depends: R (>= 3.4.0)
 Imports: Rcpp (>= 0.12.0), methods, rstan (>= 2.18.1), rstantools
 LinkingTo: StanHeaders (>= 2.18.0), rstan (>= 2.18.1), BH (>= 1.66.0), Rcpp (>= 0.12.0), RcppEigen (>= 0.3.3.3.0)
+SystemRequirements: GNU make
 Encoding: UTF-8
