--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,9 +33,10 @@ Suggests:
     testthat,
     covr,
     knitr,
+    pkgbuild,
     pkgload,
     roxygen2 (>= 6.0.1),
     rmarkdown,
     rstudioapi,
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
 VignetteBuilder: knitr
