--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -15,31 +15,31 @@ navbar:
     - text: "Other Packages"
       menu:
         - text: "rstan"
-          href: http://mc-stan.org/rstan
+          href: https://mc-stan.org/rstan
         - text: "rstanarm"
-          href: http://mc-stan.org/rstanarm
+          href: https://mc-stan.org/rstanarm
         - text: "bayesplot"
-          href: http://mc-stan.org/bayesplot
+          href: https://mc-stan.org/bayesplot
         - text: "shinystan"
-          href: http://mc-stan.org/shinystan
+          href: https://mc-stan.org/shinystan
         - text: "loo"
-          href: http://mc-stan.org/loo
+          href: https://mc-stan.org/loo
         - text: "projpred"
-          href: http://mc-stan.org/projpred
+          href: https://mc-stan.org/projpred
     - text: "Stan"
-      href: http://mc-stan.org
+      href: https://mc-stan.org
   right:
    - icon: fa-twitter
      href: https://twitter.com/mcmc_stan
    - icon: fa-github
      href: https://github.com/stan-dev/rstantools
    - icon: fa-users
-     href: http://discourse.mc-stan.org/
+     href: https://discourse.mc-stan.org/
 
 home:
   links:
   - text: Ask a question
-    href: http://discourse.mc-stan.org/
+    href: https://discourse.mc-stan.org/
 
 articles:
   - title: "Recommendations for R package development with Stan"
