--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(posterior_predict)
 export(predictive_error)
 export(predictive_interval)
 export(prior_summary)
+export(reloo)
 export(rstan_package_skeleton)
 importFrom(stats,quantile)
 importFrom(stats,var)
