--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,7 @@ Suggests:
     shinystan (>= 2.4.0),
     loo (>= 2.0.0),
     usethis (>= 1.3.0),
-    testthat,
+    testthat (>= 2.0.0),
     covr,
     knitr,
     pkgbuild,
