--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ sudo: false
 cache: packages
 dist: trusty
 
+r_github_packages:
+  - r-lib/covr
+
 r_build_args: '--no-build-vignettes'
 r_check_args: '--ignore-vignettes'
 warnings_are_errors: true
