--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,25 @@
 Package: rstantools
 Type: Package
 Title: Tools for Developing R Packages Interfacing with 'Stan'
-Version: 2.0.0.9000
-Date: 2019-06-05
-Authors@R: c(person("Jonah", "Gabry", email = "jsg2201@columbia.edu",
-                    role = c("aut", "cre")),
-             person("Ben", "Goodrich", email = "benjamin.goodrich@columbia.edu",
-                    role = "aut"),
-             person("Martin", "Lysy", email = "mlysy@uwaterloo.ca",
-                    role = "aut"),
-             person("Stefan", "Siegert", role = "ctb"),
-             person("Trustees of", "Columbia University", role = "cph"))
+Authors@R: 
+    c(person(given = "Jonah",
+             family = "Gabry",
+             role = c("aut", "cre"),
+             email = "jsg2201@columbia.edu"),
+      person(given = "Ben",
+             family = "Goodrich",
+             role = "aut",
+             email = "benjamin.goodrich@columbia.edu"),
+      person(given = "Martin",
+             family = "Lysy",
+             role = "aut",
+             email = "mlysy@uwaterloo.ca"),
+      person(given = "Stefan",
+             family = "Siegert",
+             role = "ctb"),
+      person(given = "Trustees of",
+             family = "Columbia University",
+             role = "cph"))
 Description: Provides various tools for developers of R packages interfacing
     with 'Stan' <https://mc-stan.org>, including functions to set up the required 
     package structure, S3 generics and default methods to unify function naming 
@@ -24,14 +33,10 @@ LazyData: true
 SystemRequirements: pandoc, C++14
 Imports: stats, utils, Rcpp (>= 0.12.16), desc
 Suggests:
-    bayesplot (>= 1.7.0),
     rstan (>= 2.17.2),
     rstanarm (>= 2.17.4),
-    shinystan (>= 2.4.0),
-    loo (>= 2.0.0),
     usethis (>= 1.3.0),
     testthat (>= 2.0.0),
-    covr,
     knitr,
     pkgbuild,
     pkgload,
