--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,8 @@
 Package: rstantools
 Type: Package
 Title: Tools for Developing R Packages Interfacing with 'Stan'
+Version: 2.0.0
+Date: 2019-09-13
 Authors@R: 
     c(person(given = "Jonah",
              family = "Gabry",
