--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,7 @@ Description: Provides various tools for developers of R packages interfacing
     across 'Stan'-based R packages, and vignettes with recommendations for 
     developers.
 License: GPL (>=3)
-URL: https://discourse.mc-stan.org/, https://mc-stan.org/rstantools/
+URL: https://mc-stan.org/rstantools/, https://discourse.mc-stan.org/
 BugReports: https://github.com/stan-dev/rstantools/issues
 Encoding: UTF-8
 LazyData: true
