--- a/.travis.yml
+++ b/.travis.yml
@@ -16,22 +16,27 @@ warnings_are_errors: true
 env:
   - _R_CHECK_FORCE_SUGGESTS_=false
 
-matrix:
-  include:
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
-      env:
-        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+# matrix:
+#  include:
+#    - os: linux
+#      addons:
+#        apt:
+#          sources:
+#            - ubuntu-toolchain-r-test
+#          packages:
+#            - g++-7
+#      env:
+#        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
 
 before_install:
   - mkdir -p ~/.R/
-  - echo "CXX14 = g++-7 -fPIC" >> ~/.R/Makevars
+  - echo "CXX14=g++ -std=c++1y -fPIC" >> ~/.R/Makevars
   - echo "CXX14FLAGS = -mtune=native -march=native -Wno-unused-variable -Wno-unused-function -Wno-unused-local-typedefs -Wno-ignored-attributes -Wno-deprecated-declarations -Wno-attributes -O3" >> ~/.R/Makevars
 
-after_success:
-  - Rscript -e 'covr::codecov(function_exclusions = c("init_cpp"))'
+# after_success:
+#  - Rscript -e 'covr::codecov(function_exclusions = c("init_cpp"))'
