--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rstantools
 Type: Package
 Title: Tools for Developing R Packages Interfacing with 'Stan'
-Version: 2.0.0.9000
-Date: 2019-09-13
+Version: 2.1.0
+Date: 2020-05-30
 Authors@R: 
     c(person(given = "Jonah",
              family = "Gabry",
@@ -33,7 +33,7 @@ BugReports: https://github.com/stan-dev/rstantools/issues
 Encoding: UTF-8
 LazyData: true
 SystemRequirements: pandoc, C++14
-Imports: stats, utils, Rcpp (>= 0.12.16), desc
+Imports: stats, utils, Rcpp (>= 0.12.16), desc, RcppParallel (>= 5.0.1)
 Suggests:
     rstan (>= 2.17.2),
     usethis (>= 1.5.1),
