--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,7 @@ BugReports: https://github.com/stan-dev/rstantools/issues
 Encoding: UTF-8
 LazyData: true
 SystemRequirements: pandoc, C++14
-Imports: stats, utils, Rcpp (>= 0.12.16), desc, RcppParallel (>= 5.0.1)
+Imports: desc, stats, utils, Rcpp (>= 0.12.16), RcppParallel (>= 5.0.1)
 Suggests:
     rstan (>= 2.17.2),
     usethis (>= 1.5.1),
