--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -9,6 +9,8 @@ template:
 navbar:
   title: "rstantools"
   left:
+    - icon: fa-home fa-lg
+      href: index.html 
     - text: "Vignettes"
       href: articles/index.html
     - text: "Functions"
@@ -31,6 +33,8 @@ navbar:
           href: https://mc-stan.org/loo
         - text: "projpred"
           href: https://mc-stan.org/projpred
+        - text: "posterior"
+          href: https://mc-stan.org/posterior
     - text: "Stan"
       href: https://mc-stan.org
   right:
