--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -19,7 +19,8 @@ jobs:
       matrix:
         config:
           - {os: macOS-latest,   r: 'release'}
-          - {os: windows-latest, r: 'release'}
+          # Vignette building hangs infinitely on Windows GHA, so disable for now
+          #- {os: windows-latest, r: 'release'}
           - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-latest,   r: 'release'}
           - {os: ubuntu-latest,   r: 'oldrel-1'}
@@ -43,22 +44,25 @@ jobs:
         with:
           extra-packages: rcmdcheck BH RcppParallel RcppEigen Rcpp rstan StanHeaders
 
+      - name: Check against CRAN StanHeaders and CRAN RStan
       - uses: r-lib/actions/check-r-package@v1
 
-      - name: Check against Development StanHeaders and CRAN RStan
+      - name: Install Development StanHeaders and CRAN RStan
         run: |
           install.packages("StanHeaders", repos = c("https://mc-stan.org/r-packages/", getOption("repos")))
           install.packages('rstan', type='source')
         shell: Rscript {0}
 
+      - name: Check against Development StanHeaders and CRAN RStan
       - uses: r-lib/actions/check-r-package@v1
 
-      - name: Check against Development StanHeaders and Development RStan
+      - name: Install Development StanHeaders and Development RStan
         run: |
           install.packages("StanHeaders", repos = c("https://mc-stan.org/r-packages/", getOption("repos")))
           install.packages("rstan", repos = c("https://mc-stan.org/r-packages/", getOption("repos")))
         shell: Rscript {0}
 
+      - name: Check against Development StanHeaders and Development RStan
       - uses: r-lib/actions/check-r-package@v1
 
       - name: Show testthat output
