--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -49,6 +49,7 @@ jobs:
 
       - name: Install Development StanHeaders and CRAN RStan
         run: |
+          Sys.setenv(MAKEFLAGS=paste0("-j",parallel::detectCores()))
           install.packages("StanHeaders", repos = c("https://mc-stan.org/r-packages/", getOption("repos")))
           install.packages('rstan', type='source')
         shell: Rscript {0}
@@ -58,6 +59,7 @@ jobs:
 
       - name: Install Development StanHeaders and Development RStan
         run: |
+          Sys.setenv(MAKEFLAGS=paste0("-j",parallel::detectCores()))
           install.packages("StanHeaders", repos = c("https://mc-stan.org/r-packages/", getOption("repos")))
           install.packages("rstan", repos = c("https://mc-stan.org/r-packages/", getOption("repos")))
         shell: Rscript {0}
