--- a/.github/workflows/check-standalone.yaml
+++ b/.github/workflows/check-standalone.yaml
@@ -48,6 +48,7 @@ jobs:
       - name: Check against CRAN StanHeaders and CRAN RStan
         run: |
           rcmdcheck::rcmdcheck(path = "lgpr", args = c("--no-manual", "--as-cran"), build_args = "--no-manual")
+        shell: Rscript {0}
 
       - name: Install Development StanHeaders and CRAN RStan
         run: |
@@ -59,6 +60,7 @@ jobs:
       - name: Check against CRAN StanHeaders and CRAN RStan
         run: |
           rcmdcheck::rcmdcheck(path = "lgpr", args = c("--no-manual", "--as-cran"), build_args = "--no-manual")
+        shell: Rscript {0}
 
       - name: Install Development StanHeaders and Development RStan
         run: |
@@ -70,4 +72,5 @@ jobs:
       - name: Check against CRAN StanHeaders and CRAN RStan
         run: |
           rcmdcheck::rcmdcheck(path = "lgpr", args = c("--no-manual", "--as-cran"), build_args = "--no-manual")
+        shell: Rscript {0}
 
