--- a/tests/testthat/RStanTest/NAMESPACE
+++ b/tests/testthat/RStanTest/NAMESPACE
@@ -5,4 +5,6 @@ export(postsamp2)
 import(Rcpp)
 import(methods)
 importFrom(rstan,sampling)
+importFrom(rstantools,rstan_config)
+importFrom(RcppParallel,RcppParallelLibs)
 useDynLib(RStanTest, .registration = TRUE)
