--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -42,7 +42,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: rcmdcheck BH RcppParallel RcppEigen Rcpp rstan StanHeaders
+          extra-packages: rcmdcheck BH RcppParallel RcppEigen Rcpp rstan StanHeaders V8
 
       - name: Check against CRAN StanHeaders and CRAN RStan
         uses: r-lib/actions/check-r-package@v2
