Test against lgpr branch with new array syntax

--- a/.github/workflows/check-standalone.yaml
+++ b/.github/workflows/check-standalone.yaml
@@ -42,7 +42,8 @@ jobs:
 
       - name: Checkout lgpr package
         run: |
-          git clone https://github.com/jtimonen/lgpr
+          git clone https://github.com/andrjohns/lgpr
+          git checkout array-syntax
 
       - name: Check against CRAN StanHeaders and CRAN RStan
         run: |
