--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -30,13 +30,12 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: local::.
-
-      - name: Build package
-        run: R CMD BUILD .
+          extra-packages: devtools
         
       - name: Run reverse dependency checks
-        run: tools::check_packages_in_dir(getwd(), reverse = list(), Ncpus = 3)
+        run: |
+          devtools::build()
+          tools::check_packages_in_dir("../", reverse = list(), Ncpus = 3)
         shell: Rscript {0}
         
           
