--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -22,20 +22,15 @@ jobs:
       - uses: actions/checkout@v4
       - uses: r-lib/actions/setup-pandoc@v2
       - uses: r-lib/actions/setup-r@v2
-      
-      - name: Install R Package Build Dependencies on MacOS
-        uses: r-hub/actions/setup-r-sysreqs@v1
-        with:
-          type: full
 
       - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: devtools
+      
+      - name: Build package
+        run: R CMD BUILD .
         
       - name: Run reverse dependency checks
         run: |
-          devtools::build()
-          tools::check_packages_in_dir("../", reverse = list(), Ncpus = 3)
+          tools::check_packages_in_dir(getwd(), reverse = list(), Ncpus = 3)
         shell: Rscript {0}
         
           
