--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -24,6 +24,8 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
 
       - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: rcmdcheck BH RcppParallel RcppEigen Rcpp rstan StanHeaders V8
       
       - name: Build package
         run: R CMD BUILD .
