--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -25,10 +25,16 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: rcmdcheck BH RcppParallel RcppEigen Rcpp rstan StanHeaders V8
+          cache: 'always'
+          extra-packages: rcmdcheck rstan github::r-lib/revdepcheck
       
       - name: Build package
         run: R CMD BUILD .
+        
+      - name: install dependencies
+        run:
+          pak::pak(revdepcheck::cran_revdeps('rstantools'))
+        shell: Rscript {0}
         
       - name: Run reverse dependency checks
         run: |
