--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -26,15 +26,23 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           cache: 'always'
-          extra-packages: rcmdcheck BH RcppParallel RcppEigen Rcpp rstan
+          extra-packages: rcmdcheck BH RcppParallel RcppEigen Rcpp rstan github::r-lib/revdepcheck
       
       - name: Install R Package Build Dependencies
         uses: r-hub/actions/setup-r-sysreqs@v1
         with:
           type: full      
           
+      - name: Install additional deps
+        run: |
+          brew install jags openjdk
+          R CMD javareconf
+          
       - name: Build package
         run: R CMD BUILD .
+        
+      - name: Install dependencies
+        run: pak::pak(revdepcheck::cran_revdeps('rstantools'), dependencies = TRUE)
         
       - name: Run reverse dependency checks
         run: |
