--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -46,7 +46,7 @@ jobs:
         shell: Rscript {0} 
           
       - name: Install dependencies
-        run: install.packages(revdepcheck::cran_revdeps('rstantools'), dependencies = TRUE)
+        run: pak::pak(revdepcheck::cran_revdeps('rstantools'), dependencies = TRUE)
         shell: Rscript {0}
         
       - name: Build package
