--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -53,5 +53,7 @@ jobs:
             mode = "wb"
           )
 
+          pak::pak(file.path(getwd(), "revdepchecks", pkg_tar_names))
+
           tools::check_packages_in_dir("./revdepchecks", Ncpus = 3)
         shell: Rscript {0}
